// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Success renders content tailored to Caring Leave 1`] = `
<div>
  <a
    class="usa-button margin-bottom-5 usa-button--unstyled"
    href="/applications"
  >
    <svg
      class="margin-right-05"
      height="12"
      viewBox="0 0 448 512"
      width="12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M257.5 445.1l-22.2 22.2c-9.4 9.4-24.6 9.4-33.9 0L7 273c-9.4-9.4-9.4-24.6 0-33.9L201.4 44.7c9.4-9.4 24.6-9.4 33.9 0l22.2 22.2c9.5 9.5 9.3 25-.4 34.3L136.6 216H424c13.3 0 24 10.7 24 24v32c0 13.3-10.7 24-24 24H136.6l120.5 114.8c9.8 9.3 10 24.8.4 34.3z"
        fill="currentColor"
      />
    </svg>
    Back to your applications
  </a>
  <h1
    class="js-title margin-top-0 margin-bottom-2 font-heading-lg line-height-sans-2"
    tabindex="-1"
  >
    You submitted your application
  </h1>
  <p
    class="margin-bottom-5"
  >
    Your application ID is 
    <strong>
      NTN-111-ABS-01
    </strong>
  </p>
  <div
    class="measure-6"
  >
    <h2
      class="font-heading-md text-bold"
    >
      <svg
        class="margin-right-2 text-secondary text-middle"
        fill="currentColor"
        height="30"
        viewBox="0 0 33 37"
        width="30"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20.841 35.51C9.798 40.57-7.343 7.19 3.451 1.56L6.609 0l5.235 10.23-3.121 1.54c-3.281 1.77 3.553 15.14 6.909 13.51.136-.06 3.083-1.51 3.094-1.52l5.278 10.2c-.012.01-2.982 1.47-3.163 1.55zm.399-29.23a9.49 9.49 0 016.376 11.81l-2.69-.8a6.681 6.681 0 00-.528-5.09 6.65 6.65 0 00-3.962-3.22zM19.838 11a4.542 4.542 0 012.71 2.21c.6 1.11.694 2.35.36 3.48l-4.373-1.31zm2.003-6.74c2.84.85 5.359 2.78 6.881 5.6 1.52 2.82 1.757 5.99.912 8.83l2.758.83a14.45 14.45 0 00-1.141-11.03 14.41 14.41 0 00-8.587-6.99z"
        />
      </svg>
      We may need more information from you
    </h2>
    <p>
      Call the Contact Center at 
      <a
        href="tel:(833) 344-7365"
      >
        (833) 344‑7365
      </a>
       if any of these are true:
    </p>
    <ul
      class="usa-list"
    >
      <li>
        You have already taken leave to care for a family member since July 1, 2021
      </li>
      <li>
        You have already taken leave since January 1, 2021 for 
        <a
          href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-fact-sheet#when-can-i-use-pfml?-"
          rel="noopener noreferrer"
          target="_blank"
        >
          any other reason that qualifies for PFML
        </a>
      </li>
      <li>
        You plan to use any accrued paid leave or any other benefits from your employer during your paid leave from PFML (for example: your employer’s parental leave program or paid sick time)
      </li>
      <li>
        You expect to get income from any other sources during your leave (for example: disability insurance, retirement benefits, or another job)
      </li>
    </ul>
    <h2
      class="font-heading-md text-bold"
    >
      <svg
        aria-hidden="true"
        class="margin-right-2 text-secondary text-middle"
        fill="currentColor"
        height="30"
        viewBox="0 0 20 20"
        width="30"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 1.7V20H0V1.7h2.5v.8c.1.9.9 1.6 1.8 1.5.8 0 1.5-.7 1.5-1.5v-.8h8.3v.8c.1.9.9 1.6 1.9 1.5.8-.1 1.5-.7 1.5-1.5v-.8H20zm-1.7 5H1.7v11.7h16.7V6.7zm-1.6-4.2c0 .5-.4.8-.8.8S15 3 15 2.5V.8c0-.4.4-.8.8-.8s.8.4.8.8v1.7zM5 2.5c0 .5-.4.8-.8.8s-.9-.3-.9-.8V.8c0-.4.4-.8.9-.8s.8.4.8.8v1.7z"
        />
      </svg>
      What happens next
    </h2>
    <ul
      class="usa-list"
    >
      <li>
        Your employer has 10 business days to provide feedback on your application.
      </li>
       
      <li>
        We’ll confirm your eligibility and make sure that your documents are valid.
      </li>
       
      <li>
        After we’ve made a decision, you’ll receive an email notification with a link to details about the decision. Your employer will also get a copy of the decision.
      </li>
      <li>
        Once your application is approved, you can expect your first payment to arrive at the beginning of your fourth week of leave, if your leave has already started. If your leave starts in the future, you can expect your first payment 2-4 weeks after your leave starts. After that, you will receive your payments every week.
      </li>
      <li>
        If you need to end your leave early, you must call the DFML Contact Center at 
        <a
          href="tel:(833) 344-7365"
        >
          (833) 344‑7365
        </a>
        .
      </li>
      <li>
        <a
          href="/applications/status?absence_case_id=NTN-111-ABS-01"
        >
          Track the status of your application here
        </a>
        .
      </li>
    </ul>
    <h2
      class="font-heading-md text-bold"
    >
      Learn more about paid leave benefits
    </h2>
    Review 
    <a
      href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefits-guide#benefit-amount-details-"
      rel="noreferrer noopener"
      target="_blank"
    >
      our benefits guide
    </a>
     to find out more about how benefits are determined. For a rough estimate of how much you might receive, 
    <a
      href="https://calculator.digital.mass.gov/pfml/yourbenefits/"
      rel="noreferrer noopener"
      target="_blank"
    >
      use this calculator
    </a>
    . The maximum total amount that a person can receive in PFML benefits is $850 per week, even if you have been approved for leave benefits from multiple employers.
    <div
      class="border-top-2px border-base-lighter margin-top-4 padding-top-4"
    >
      <h2
        class="font-heading-md text-bold"
      >
        Help us improve this site
      </h2>
      <p>
        We’d like to hear more about your experience on this site. Please take a few minutes to share your feedback.
      </p>
      <p>
        <a
          href="https://www.mass.gov/paidleave-claimant-feedback"
          rel="noopener"
          target="_blank"
        >
          Take the survey
        </a>
      </p>
    </div>
    <div
      class="border-top-2px border-base-lighter margin-top-4 padding-top-4"
    >
      <h2
        class="font-heading-md text-bold"
      >
        View status and details for your application
      </h2>
      <a
        class="usa-button margin-top-4"
        href="/applications/status?absence_case_id=NTN-111-ABS-01"
      >
        View your application
      </a>
    </div>
  </div>
</div>
`;

exports[`Success renders content tailored to Family (Bonding Adoption) 1`] = `
<div>
  <a
    class="usa-button margin-bottom-5 usa-button--unstyled"
    href="/applications"
  >
    <svg
      class="margin-right-05"
      height="12"
      viewBox="0 0 448 512"
      width="12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M257.5 445.1l-22.2 22.2c-9.4 9.4-24.6 9.4-33.9 0L7 273c-9.4-9.4-9.4-24.6 0-33.9L201.4 44.7c9.4-9.4 24.6-9.4 33.9 0l22.2 22.2c9.5 9.5 9.3 25-.4 34.3L136.6 216H424c13.3 0 24 10.7 24 24v32c0 13.3-10.7 24-24 24H136.6l120.5 114.8c9.8 9.3 10 24.8.4 34.3z"
        fill="currentColor"
      />
    </svg>
    Back to your applications
  </a>
  <h1
    class="js-title margin-top-0 margin-bottom-2 font-heading-lg line-height-sans-2"
    tabindex="-1"
  >
    You submitted your application
  </h1>
  <p
    class="margin-bottom-5"
  >
    Your application ID is 
    <strong>
      NTN-111-ABS-01
    </strong>
  </p>
  <div
    class="measure-6"
  >
    <h2
      class="font-heading-md text-bold"
    >
      <svg
        class="margin-right-2 text-secondary text-middle"
        fill="currentColor"
        height="30"
        viewBox="0 0 33 37"
        width="30"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20.841 35.51C9.798 40.57-7.343 7.19 3.451 1.56L6.609 0l5.235 10.23-3.121 1.54c-3.281 1.77 3.553 15.14 6.909 13.51.136-.06 3.083-1.51 3.094-1.52l5.278 10.2c-.012.01-2.982 1.47-3.163 1.55zm.399-29.23a9.49 9.49 0 016.376 11.81l-2.69-.8a6.681 6.681 0 00-.528-5.09 6.65 6.65 0 00-3.962-3.22zM19.838 11a4.542 4.542 0 012.71 2.21c.6 1.11.694 2.35.36 3.48l-4.373-1.31zm2.003-6.74c2.84.85 5.359 2.78 6.881 5.6 1.52 2.82 1.757 5.99.912 8.83l2.758.83a14.45 14.45 0 00-1.141-11.03 14.41 14.41 0 00-8.587-6.99z"
        />
      </svg>
      We may need more information from you
    </h2>
    <p>
      Call the Contact Center at 
      <a
        href="tel:(833) 344-7365"
      >
        (833) 344‑7365
      </a>
       if any of these are true:
    </p>
    <ul
      class="usa-list"
    >
      <li>
        You have already taken leave to care for a family member since July 1, 2021
      </li>
      <li>
        You have already taken leave since January 1, 2021 for 
        <a
          href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-fact-sheet#when-can-i-use-pfml?-"
          rel="noopener noreferrer"
          target="_blank"
        >
          any other reason that qualifies for PFML
        </a>
      </li>
      <li>
        You plan to use any accrued paid leave or any other benefits from your employer during your paid leave from PFML (for example: your employer’s parental leave program or paid sick time)
      </li>
      <li>
        You expect to get income from any other sources during your leave (for example: disability insurance, retirement benefits, or another job)
      </li>
    </ul>
    <h2
      class="font-heading-md text-bold"
    >
      <svg
        aria-hidden="true"
        class="margin-right-2 text-secondary text-middle"
        fill="currentColor"
        height="30"
        viewBox="0 0 20 20"
        width="30"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 1.7V20H0V1.7h2.5v.8c.1.9.9 1.6 1.8 1.5.8 0 1.5-.7 1.5-1.5v-.8h8.3v.8c.1.9.9 1.6 1.9 1.5.8-.1 1.5-.7 1.5-1.5v-.8H20zm-1.7 5H1.7v11.7h16.7V6.7zm-1.6-4.2c0 .5-.4.8-.8.8S15 3 15 2.5V.8c0-.4.4-.8.8-.8s.8.4.8.8v1.7zM5 2.5c0 .5-.4.8-.8.8s-.9-.3-.9-.8V.8c0-.4.4-.8.9-.8s.8.4.8.8v1.7z"
        />
      </svg>
      What happens next
    </h2>
    <ul
      class="usa-list"
    >
       
      <li>
        Your employer has 10 business days to provide feedback on your application.
      </li>
       
      <li>
        We’ll confirm your eligibility and make sure that your documents are valid.
      </li>
       
      <li>
        After we’ve made a decision, you’ll receive an email notification with a link to details about the decision. Your employer will also get a copy of the decision.
      </li>
      <li>
        Once your application is approved, you can expect your first payment to arrive at the beginning of your fourth week of leave, if your leave has already started. If your leave starts in the future, you can expect your first payment 2-4 weeks after your leave starts. After that, you will receive your payments every week.
      </li>
      <li>
        <a
          href="/applications/status?absence_case_id=NTN-111-ABS-01"
        >
          Track the status of your application here
        </a>
        .
      </li>
    </ul>
    <h2
      class="font-heading-md text-bold"
    >
      Learn more about paid leave benefits
    </h2>
    Review 
    <a
      href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefits-guide#benefit-amount-details-"
      rel="noreferrer noopener"
      target="_blank"
    >
      our benefits guide
    </a>
     to find out more about how benefits are determined. For a rough estimate of how much you might receive, 
    <a
      href="https://calculator.digital.mass.gov/pfml/yourbenefits/"
      rel="noreferrer noopener"
      target="_blank"
    >
      use this calculator
    </a>
    . The maximum total amount that a person can receive in PFML benefits is $850 per week, even if you have been approved for leave benefits from multiple employers.
    <div
      class="border-top-2px border-base-lighter margin-top-4 padding-top-4"
    >
      <h2
        class="font-heading-md text-bold"
      >
        Help us improve this site
      </h2>
      <p>
        We’d like to hear more about your experience on this site. Please take a few minutes to share your feedback.
      </p>
      <p>
        <a
          href="https://www.mass.gov/paidleave-claimant-feedback"
          rel="noopener"
          target="_blank"
        >
          Take the survey
        </a>
      </p>
    </div>
    <div
      class="border-top-2px border-base-lighter margin-top-4 padding-top-4"
    >
      <h2
        class="font-heading-md text-bold"
      >
        View status and details for your application
      </h2>
      <a
        class="usa-button margin-top-4"
        href="/applications/status?absence_case_id=NTN-111-ABS-01"
      >
        View your application
      </a>
    </div>
  </div>
</div>
`;

exports[`Success renders content tailored to Family (Bonding Future Adoption) 1`] = `
<div>
  <a
    class="usa-button margin-bottom-5 usa-button--unstyled"
    href="/applications"
  >
    <svg
      class="margin-right-05"
      height="12"
      viewBox="0 0 448 512"
      width="12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M257.5 445.1l-22.2 22.2c-9.4 9.4-24.6 9.4-33.9 0L7 273c-9.4-9.4-9.4-24.6 0-33.9L201.4 44.7c9.4-9.4 24.6-9.4 33.9 0l22.2 22.2c9.5 9.5 9.3 25-.4 34.3L136.6 216H424c13.3 0 24 10.7 24 24v32c0 13.3-10.7 24-24 24H136.6l120.5 114.8c9.8 9.3 10 24.8.4 34.3z"
        fill="currentColor"
      />
    </svg>
    Back to your applications
  </a>
  <h1
    class="js-title margin-top-0 margin-bottom-2 font-heading-lg line-height-sans-2"
    tabindex="-1"
  >
    You submitted your application
  </h1>
  <p
    class="margin-bottom-5"
  >
    Your application ID is 
    <strong>
      NTN-111-ABS-01
    </strong>
  </p>
  <div
    class="measure-6"
  >
    <div
      class="usa-alert usa-alert--warning c-alert--auto-width"
      tabindex="-1"
    >
      <div
        class="usa-alert__body"
        role="region"
      >
        <div
          class="usa-alert__text"
        >
          After your child arrives in your home, you will need to upload, mail, or fax a document that shows your child’s placement date.
        </div>
      </div>
    </div>
    <h2
      class="font-heading-md text-bold"
    >
      <svg
        aria-hidden="true"
        class="margin-right-2 text-secondary text-middle"
        fill="currentColor"
        height="30"
        viewBox="0 0 20 20"
        width="30"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 1.7V20H0V1.7h2.5v.8c.1.9.9 1.6 1.8 1.5.8 0 1.5-.7 1.5-1.5v-.8h8.3v.8c.1.9.9 1.6 1.9 1.5.8-.1 1.5-.7 1.5-1.5v-.8H20zm-1.7 5H1.7v11.7h16.7V6.7zm-1.6-4.2c0 .5-.4.8-.8.8S15 3 15 2.5V.8c0-.4.4-.8.8-.8s.8.4.8.8v1.7zM5 2.5c0 .5-.4.8-.8.8s-.9-.3-.9-.8V.8c0-.4.4-.8.9-.8s.8.4.8.8v1.7z"
        />
      </svg>
      What happens next
    </h2>
    <ul
      class="usa-list"
    >
      <li>
        Your employer has 10 days to provide feedback on your application.
      </li>
       
      <li>
        Once you’ve provided proof of placement, we’ll confirm your eligibility and make sure that your documents are valid.
      </li>
       
      <li>
        After we’ve made a decision, you’ll receive an email notification with a link to details about the decision.
      </li>
       
      <li>
        If you need to change your leave dates because your child arrived in your home earlier or later than expected, you must call the DFML Contact Center at 
        <a
          href="tel:(833) 344-7365"
        >
          (833) 344‑7365
        </a>
        .
      </li>
      <li>
        If your application is approved prior to your leave, you can expect your first payment to arrive about 3 weeks after your leave starts. Otherwise, you can expect your first payment 2-3 weeks after your leave is approved.
      </li>
      <li>
        <a
          href="/applications/status?absence_case_id=NTN-111-ABS-01"
        >
          Track the status of your application here
        </a>
        .
      </li>
    </ul>
    <h2
      class="font-heading-md text-bold"
    >
      Learn more about paid leave benefits
    </h2>
    Review 
    <a
      href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefits-guide#benefit-amount-details-"
      rel="noreferrer noopener"
      target="_blank"
    >
      our benefits guide
    </a>
     to find out more about how benefits are determined. For a rough estimate of how much you might receive, 
    <a
      href="https://calculator.digital.mass.gov/pfml/yourbenefits/"
      rel="noreferrer noopener"
      target="_blank"
    >
      use this calculator
    </a>
    . The maximum total amount that a person can receive in PFML benefits is $850 per week, even if you have been approved for leave benefits from multiple employers.
    <div
      class="border-top-2px border-base-lighter margin-top-4 padding-top-4"
    >
      <h2
        class="font-heading-md text-bold"
      >
        Help us improve this site
      </h2>
      <p>
        We’d like to hear more about your experience on this site. Please take a few minutes to share your feedback.
      </p>
      <p>
        <a
          href="https://www.mass.gov/paidleave-claimant-feedback"
          rel="noopener"
          target="_blank"
        >
          Take the survey
        </a>
      </p>
    </div>
    <div
      class="border-top-2px border-base-lighter margin-top-4 padding-top-4"
    >
      <h2
        class="font-heading-md text-bold"
      >
        View status and details for your application
      </h2>
      <a
        class="usa-button margin-top-4"
        href="/applications/status?absence_case_id=NTN-111-ABS-01"
      >
        View your application
      </a>
    </div>
  </div>
</div>
`;

exports[`Success renders content tailored to Family (Bonding Future Newborn) 1`] = `
<div>
  <a
    class="usa-button margin-bottom-5 usa-button--unstyled"
    href="/applications"
  >
    <svg
      class="margin-right-05"
      height="12"
      viewBox="0 0 448 512"
      width="12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M257.5 445.1l-22.2 22.2c-9.4 9.4-24.6 9.4-33.9 0L7 273c-9.4-9.4-9.4-24.6 0-33.9L201.4 44.7c9.4-9.4 24.6-9.4 33.9 0l22.2 22.2c9.5 9.5 9.3 25-.4 34.3L136.6 216H424c13.3 0 24 10.7 24 24v32c0 13.3-10.7 24-24 24H136.6l120.5 114.8c9.8 9.3 10 24.8.4 34.3z"
        fill="currentColor"
      />
    </svg>
    Back to your applications
  </a>
  <h1
    class="js-title margin-top-0 margin-bottom-2 font-heading-lg line-height-sans-2"
    tabindex="-1"
  >
    You submitted your application
  </h1>
  <p
    class="margin-bottom-5"
  >
    Your application ID is 
    <strong>
      NTN-111-ABS-01
    </strong>
  </p>
  <div
    class="measure-6"
  >
    <div
      class="usa-alert usa-alert--warning c-alert--auto-width"
      tabindex="-1"
    >
      <div
        class="usa-alert__body"
        role="region"
      >
        <div
          class="usa-alert__text"
        >
          After your child is born, you will need to upload, mail, or fax a document that shows your child’s date of birth.
        </div>
      </div>
    </div>
    <h2
      class="font-heading-md text-bold"
    >
      <svg
        aria-hidden="true"
        class="margin-right-2 text-secondary text-middle"
        fill="currentColor"
        height="30"
        viewBox="0 0 20 20"
        width="30"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 1.7V20H0V1.7h2.5v.8c.1.9.9 1.6 1.8 1.5.8 0 1.5-.7 1.5-1.5v-.8h8.3v.8c.1.9.9 1.6 1.9 1.5.8-.1 1.5-.7 1.5-1.5v-.8H20zm-1.7 5H1.7v11.7h16.7V6.7zm-1.6-4.2c0 .5-.4.8-.8.8S15 3 15 2.5V.8c0-.4.4-.8.8-.8s.8.4.8.8v1.7zM5 2.5c0 .5-.4.8-.8.8s-.9-.3-.9-.8V.8c0-.4.4-.8.9-.8s.8.4.8.8v1.7z"
        />
      </svg>
      What happens next
    </h2>
    <ul
      class="usa-list"
    >
      <li>
        Your employer has 10 days to provide feedback on your application.
      </li>
       
      <li>
        Once you’ve provided proof of birth, we’ll confirm your eligibility and make sure that your documents are valid.
      </li>
       
      <li>
        After we’ve made a decision, you’ll receive an email notification with a link to details about the decision.
      </li>
       
      <li>
        If you need to change your leave dates because your child was born earlier or later than expected, you must call the DFML Contact Center at 
        <a
          href="tel:(833) 344-7365"
        >
          (833) 344‑7365
        </a>
        .
      </li>
      <li>
        If your application is approved prior to your leave, you can expect your first payment to arrive about 3 weeks after your leave starts. Otherwise, you can expect your first payment 2-3 weeks after your leave is approved.
      </li>
      <li>
        <a
          href="/applications/status?absence_case_id=NTN-111-ABS-01"
        >
          Track the status of your application here
        </a>
        .
      </li>
    </ul>
    <h2
      class="font-heading-md text-bold"
    >
      Learn more about paid leave benefits
    </h2>
    Review 
    <a
      href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefits-guide#benefit-amount-details-"
      rel="noreferrer noopener"
      target="_blank"
    >
      our benefits guide
    </a>
     to find out more about how benefits are determined. For a rough estimate of how much you might receive, 
    <a
      href="https://calculator.digital.mass.gov/pfml/yourbenefits/"
      rel="noreferrer noopener"
      target="_blank"
    >
      use this calculator
    </a>
    . The maximum total amount that a person can receive in PFML benefits is $850 per week, even if you have been approved for leave benefits from multiple employers.
    <div
      class="padding-top-2 margin-top-2"
    >
      <h2
        class="font-heading-md text-bold"
      >
        <svg
          class="margin-right-2 text-secondary text-middle"
          fill="currentColor"
          height="30"
          viewBox="0 0 13 16"
          width="30"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <path
              d="M0 .017h12.938V16H0z"
              id="icon-copy_svg__a"
            />
          </defs>
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <g>
              <mask
                fill="#fff"
                id="icon-copy_svg__b"
              >
                <use
                  xlink:href="#icon-copy_svg__a"
                />
              </mask>
              <path
                d="M11.973 12.387a.163.163 0 01-.161.161h-1.06V3.63c0-.623-.506-1.13-1.127-1.13H3.152V1.147c0-.088.073-.162.16-.162h8.5c.087 0 .16.074.16.162v11.24zM9.786 14.87a.163.163 0 01-.16.161h-8.5a.163.163 0 01-.16-.161V3.63c0-.088.073-.162.16-.162h8.5c.087 0 .16.074.16.162V14.87zM11.812.017h-8.5c-.62 0-1.126.506-1.126 1.129V2.5h-1.06C.506 2.5 0 3.007 0 3.63V14.87C0 15.493.505 16 1.126 16h8.5c.62 0 1.126-.507 1.126-1.129v-1.355h1.06c.62 0 1.126-.507 1.126-1.13V1.147c0-.623-.505-1.13-1.126-1.13z"
                fill="#000002"
                mask="url(#icon-copy_svg__b)"
              />
            </g>
            <path
              d="M8.452 4.8H2.923c-.268 0-.486.179-.486.4 0 .221.218.4.486.4h5.529c.268 0 .486-.179.486-.4 0-.22-.218-.4-.486-.4M8.452 7.2H2.923c-.268 0-.486.179-.486.4 0 .221.218.4.486.4h5.529c.268 0 .486-.179.486-.4 0-.221-.218-.4-.486-.4M8.452 9.6H2.923c-.268 0-.486.179-.486.4 0 .221.218.4.486.4h5.529c.268 0 .486-.179.486-.4 0-.221-.218-.4-.486-.4M8.452 12H2.923c-.268 0-.486.179-.486.4 0 .221.218.4.486.4h5.529c.268 0 .486-.179.486-.4 0-.221-.218-.4-.486-.4"
              fill="#000002"
            />
          </g>
        </svg>
        If you are giving birth, you may also be eligible for paid medical leave
      </h2>
      <p>
        You may be able to take up to 20 weeks of paid medical leave if you’re unable to work during your pregnancy or for your recovery from childbirth. Your health care provider determines how much medical leave you will need. Call the Contact Center at 
        <a
          href="tel:(833) 344-7365"
        >
          (833) 344‑7365
        </a>
         if you need 
        <a
          href="https://www.mass.gov/pfml-medical-bonding"
          rel="noopener noreferrer"
          target="_blank"
        >
          medical leave after giving birth
        </a>
        .
      </p>
    </div>
    <div
      class="border-top-2px border-base-lighter margin-top-4 padding-top-4"
    >
      <h2
        class="font-heading-md text-bold"
      >
        Help us improve this site
      </h2>
      <p>
        We’d like to hear more about your experience on this site. Please take a few minutes to share your feedback.
      </p>
      <p>
        <a
          href="https://www.mass.gov/paidleave-claimant-feedback"
          rel="noopener"
          target="_blank"
        >
          Take the survey
        </a>
      </p>
    </div>
    <div
      class="border-top-2px border-base-lighter margin-top-4 padding-top-4"
    >
      <h2
        class="font-heading-md text-bold"
      >
        View status and details for your application
      </h2>
      <a
        class="usa-button margin-top-4"
        href="/applications/status?absence_case_id=NTN-111-ABS-01"
      >
        View your application
      </a>
    </div>
  </div>
</div>
`;

exports[`Success renders content tailored to Family (Bonding Newborn) 1`] = `
<div>
  <a
    class="usa-button margin-bottom-5 usa-button--unstyled"
    href="/applications"
  >
    <svg
      class="margin-right-05"
      height="12"
      viewBox="0 0 448 512"
      width="12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M257.5 445.1l-22.2 22.2c-9.4 9.4-24.6 9.4-33.9 0L7 273c-9.4-9.4-9.4-24.6 0-33.9L201.4 44.7c9.4-9.4 24.6-9.4 33.9 0l22.2 22.2c9.5 9.5 9.3 25-.4 34.3L136.6 216H424c13.3 0 24 10.7 24 24v32c0 13.3-10.7 24-24 24H136.6l120.5 114.8c9.8 9.3 10 24.8.4 34.3z"
        fill="currentColor"
      />
    </svg>
    Back to your applications
  </a>
  <h1
    class="js-title margin-top-0 margin-bottom-2 font-heading-lg line-height-sans-2"
    tabindex="-1"
  >
    You submitted your application
  </h1>
  <p
    class="margin-bottom-5"
  >
    Your application ID is 
    <strong>
      NTN-111-ABS-01
    </strong>
  </p>
  <div
    class="measure-6"
  >
    <h2
      class="font-heading-md text-bold"
    >
      <svg
        class="margin-right-2 text-secondary text-middle"
        fill="currentColor"
        height="30"
        viewBox="0 0 33 37"
        width="30"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20.841 35.51C9.798 40.57-7.343 7.19 3.451 1.56L6.609 0l5.235 10.23-3.121 1.54c-3.281 1.77 3.553 15.14 6.909 13.51.136-.06 3.083-1.51 3.094-1.52l5.278 10.2c-.012.01-2.982 1.47-3.163 1.55zm.399-29.23a9.49 9.49 0 016.376 11.81l-2.69-.8a6.681 6.681 0 00-.528-5.09 6.65 6.65 0 00-3.962-3.22zM19.838 11a4.542 4.542 0 012.71 2.21c.6 1.11.694 2.35.36 3.48l-4.373-1.31zm2.003-6.74c2.84.85 5.359 2.78 6.881 5.6 1.52 2.82 1.757 5.99.912 8.83l2.758.83a14.45 14.45 0 00-1.141-11.03 14.41 14.41 0 00-8.587-6.99z"
        />
      </svg>
      We may need more information from you
    </h2>
    <p>
      Call the Contact Center at 
      <a
        href="tel:(833) 344-7365"
      >
        (833) 344‑7365
      </a>
       if any of these are true:
    </p>
    <ul
      class="usa-list"
    >
      <li>
        You have already taken leave to care for a family member since July 1, 2021
      </li>
      <li>
        You have already taken leave since January 1, 2021 for 
        <a
          href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-fact-sheet#when-can-i-use-pfml?-"
          rel="noopener noreferrer"
          target="_blank"
        >
          any other reason that qualifies for PFML
        </a>
      </li>
      <li>
        You plan to use any accrued paid leave or any other benefits from your employer during your paid leave from PFML (for example: your employer’s parental leave program or paid sick time)
      </li>
      <li>
        You expect to get income from any other sources during your leave (for example: disability insurance, retirement benefits, or another job)
      </li>
    </ul>
    <h2
      class="font-heading-md text-bold"
    >
      <svg
        aria-hidden="true"
        class="margin-right-2 text-secondary text-middle"
        fill="currentColor"
        height="30"
        viewBox="0 0 20 20"
        width="30"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 1.7V20H0V1.7h2.5v.8c.1.9.9 1.6 1.8 1.5.8 0 1.5-.7 1.5-1.5v-.8h8.3v.8c.1.9.9 1.6 1.9 1.5.8-.1 1.5-.7 1.5-1.5v-.8H20zm-1.7 5H1.7v11.7h16.7V6.7zm-1.6-4.2c0 .5-.4.8-.8.8S15 3 15 2.5V.8c0-.4.4-.8.8-.8s.8.4.8.8v1.7zM5 2.5c0 .5-.4.8-.8.8s-.9-.3-.9-.8V.8c0-.4.4-.8.9-.8s.8.4.8.8v1.7z"
        />
      </svg>
      What happens next
    </h2>
    <ul
      class="usa-list"
    >
       
      <li>
        Your employer has 10 business days to provide feedback on your application.
      </li>
       
      <li>
        We’ll confirm your eligibility and make sure that your documents are valid.
      </li>
       
      <li>
        After we’ve made a decision, you’ll receive an email notification with a link to details about the decision. Your employer will also get a copy of the decision.
      </li>
      <li>
        Once your application is approved, you can expect your first payment to arrive at the beginning of your fourth week of leave, if your leave has already started. If your leave starts in the future, you can expect your first payment 2-4 weeks after your leave starts. After that, you will receive your payments every week.
      </li>
      <li>
        <a
          href="/applications/status?absence_case_id=NTN-111-ABS-01"
        >
          Track the status of your application here
        </a>
        .
      </li>
    </ul>
    <h2
      class="font-heading-md text-bold"
    >
      Learn more about paid leave benefits
    </h2>
    Review 
    <a
      href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefits-guide#benefit-amount-details-"
      rel="noreferrer noopener"
      target="_blank"
    >
      our benefits guide
    </a>
     to find out more about how benefits are determined. For a rough estimate of how much you might receive, 
    <a
      href="https://calculator.digital.mass.gov/pfml/yourbenefits/"
      rel="noreferrer noopener"
      target="_blank"
    >
      use this calculator
    </a>
    . The maximum total amount that a person can receive in PFML benefits is $850 per week, even if you have been approved for leave benefits from multiple employers.
    <div
      class="padding-top-2 margin-top-2"
    >
      <h2
        class="font-heading-md text-bold"
      >
        <svg
          class="margin-right-2 text-secondary text-middle"
          fill="currentColor"
          height="30"
          viewBox="0 0 13 16"
          width="30"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <path
              d="M0 .017h12.938V16H0z"
              id="icon-copy_svg__a"
            />
          </defs>
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <g>
              <mask
                fill="#fff"
                id="icon-copy_svg__b"
              >
                <use
                  xlink:href="#icon-copy_svg__a"
                />
              </mask>
              <path
                d="M11.973 12.387a.163.163 0 01-.161.161h-1.06V3.63c0-.623-.506-1.13-1.127-1.13H3.152V1.147c0-.088.073-.162.16-.162h8.5c.087 0 .16.074.16.162v11.24zM9.786 14.87a.163.163 0 01-.16.161h-8.5a.163.163 0 01-.16-.161V3.63c0-.088.073-.162.16-.162h8.5c.087 0 .16.074.16.162V14.87zM11.812.017h-8.5c-.62 0-1.126.506-1.126 1.129V2.5h-1.06C.506 2.5 0 3.007 0 3.63V14.87C0 15.493.505 16 1.126 16h8.5c.62 0 1.126-.507 1.126-1.129v-1.355h1.06c.62 0 1.126-.507 1.126-1.13V1.147c0-.623-.505-1.13-1.126-1.13z"
                fill="#000002"
                mask="url(#icon-copy_svg__b)"
              />
            </g>
            <path
              d="M8.452 4.8H2.923c-.268 0-.486.179-.486.4 0 .221.218.4.486.4h5.529c.268 0 .486-.179.486-.4 0-.22-.218-.4-.486-.4M8.452 7.2H2.923c-.268 0-.486.179-.486.4 0 .221.218.4.486.4h5.529c.268 0 .486-.179.486-.4 0-.221-.218-.4-.486-.4M8.452 9.6H2.923c-.268 0-.486.179-.486.4 0 .221.218.4.486.4h5.529c.268 0 .486-.179.486-.4 0-.221-.218-.4-.486-.4M8.452 12H2.923c-.268 0-.486.179-.486.4 0 .221.218.4.486.4h5.529c.268 0 .486-.179.486-.4 0-.221-.218-.4-.486-.4"
              fill="#000002"
            />
          </g>
        </svg>
        If you are giving birth, you may also be eligible for paid medical leave
      </h2>
      <p>
        You may be able to take up to 20 weeks of paid medical leave if you’re unable to work during your pregnancy or for your recovery from childbirth. Your health care provider determines how much medical leave you will need. Call the Contact Center at 
        <a
          href="tel:(833) 344-7365"
        >
          (833) 344‑7365
        </a>
         if you need 
        <a
          href="https://www.mass.gov/pfml-medical-bonding"
          rel="noopener noreferrer"
          target="_blank"
        >
          medical leave after giving birth
        </a>
        .
      </p>
    </div>
    <div
      class="border-top-2px border-base-lighter margin-top-4 padding-top-4"
    >
      <h2
        class="font-heading-md text-bold"
      >
        Help us improve this site
      </h2>
      <p>
        We’d like to hear more about your experience on this site. Please take a few minutes to share your feedback.
      </p>
      <p>
        <a
          href="https://www.mass.gov/paidleave-claimant-feedback"
          rel="noopener"
          target="_blank"
        >
          Take the survey
        </a>
      </p>
    </div>
    <div
      class="border-top-2px border-base-lighter margin-top-4 padding-top-4"
    >
      <h2
        class="font-heading-md text-bold"
      >
        View status and details for your application
      </h2>
      <a
        class="usa-button margin-top-4"
        href="/applications/status?absence_case_id=NTN-111-ABS-01"
      >
        View your application
      </a>
    </div>
  </div>
</div>
`;

exports[`Success renders content tailored to Medical (Not pregnant) 1`] = `
<div>
  <a
    class="usa-button margin-bottom-5 usa-button--unstyled"
    href="/applications"
  >
    <svg
      class="margin-right-05"
      height="12"
      viewBox="0 0 448 512"
      width="12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M257.5 445.1l-22.2 22.2c-9.4 9.4-24.6 9.4-33.9 0L7 273c-9.4-9.4-9.4-24.6 0-33.9L201.4 44.7c9.4-9.4 24.6-9.4 33.9 0l22.2 22.2c9.5 9.5 9.3 25-.4 34.3L136.6 216H424c13.3 0 24 10.7 24 24v32c0 13.3-10.7 24-24 24H136.6l120.5 114.8c9.8 9.3 10 24.8.4 34.3z"
        fill="currentColor"
      />
    </svg>
    Back to your applications
  </a>
  <h1
    class="js-title margin-top-0 margin-bottom-2 font-heading-lg line-height-sans-2"
    tabindex="-1"
  >
    You submitted your application
  </h1>
  <p
    class="margin-bottom-5"
  >
    Your application ID is 
    <strong>
      NTN-111-ABS-01
    </strong>
  </p>
  <div
    class="measure-6"
  >
    <h2
      class="font-heading-md text-bold"
    >
      <svg
        class="margin-right-2 text-secondary text-middle"
        fill="currentColor"
        height="30"
        viewBox="0 0 33 37"
        width="30"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20.841 35.51C9.798 40.57-7.343 7.19 3.451 1.56L6.609 0l5.235 10.23-3.121 1.54c-3.281 1.77 3.553 15.14 6.909 13.51.136-.06 3.083-1.51 3.094-1.52l5.278 10.2c-.012.01-2.982 1.47-3.163 1.55zm.399-29.23a9.49 9.49 0 016.376 11.81l-2.69-.8a6.681 6.681 0 00-.528-5.09 6.65 6.65 0 00-3.962-3.22zM19.838 11a4.542 4.542 0 012.71 2.21c.6 1.11.694 2.35.36 3.48l-4.373-1.31zm2.003-6.74c2.84.85 5.359 2.78 6.881 5.6 1.52 2.82 1.757 5.99.912 8.83l2.758.83a14.45 14.45 0 00-1.141-11.03 14.41 14.41 0 00-8.587-6.99z"
        />
      </svg>
      We may need more information from you
    </h2>
    <p>
      Call the Contact Center at 
      <a
        href="tel:(833) 344-7365"
      >
        (833) 344‑7365
      </a>
       if any of these are true:
    </p>
    <ul
      class="usa-list"
    >
      <li>
        You have already taken leave to care for a family member since July 1, 2021
      </li>
      <li>
        You have already taken leave since January 1, 2021 for 
        <a
          href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-fact-sheet#when-can-i-use-pfml?-"
          rel="noopener noreferrer"
          target="_blank"
        >
          any other reason that qualifies for PFML
        </a>
      </li>
      <li>
        You plan to use any accrued paid leave or any other benefits from your employer during your paid leave from PFML (for example: your employer’s parental leave program or paid sick time)
      </li>
      <li>
        You expect to get income from any other sources during your leave (for example: disability insurance, retirement benefits, or another job)
      </li>
    </ul>
    <h2
      class="font-heading-md text-bold"
    >
      <svg
        aria-hidden="true"
        class="margin-right-2 text-secondary text-middle"
        fill="currentColor"
        height="30"
        viewBox="0 0 20 20"
        width="30"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 1.7V20H0V1.7h2.5v.8c.1.9.9 1.6 1.8 1.5.8 0 1.5-.7 1.5-1.5v-.8h8.3v.8c.1.9.9 1.6 1.9 1.5.8-.1 1.5-.7 1.5-1.5v-.8H20zm-1.7 5H1.7v11.7h16.7V6.7zm-1.6-4.2c0 .5-.4.8-.8.8S15 3 15 2.5V.8c0-.4.4-.8.8-.8s.8.4.8.8v1.7zM5 2.5c0 .5-.4.8-.8.8s-.9-.3-.9-.8V.8c0-.4.4-.8.9-.8s.8.4.8.8v1.7z"
        />
      </svg>
      What happens next
    </h2>
    <ul
      class="usa-list"
    >
       
      <li>
        Your employer has 10 business days to provide feedback on your application.
      </li>
       
      <li>
        We’ll confirm your eligibility and make sure that your documents are valid.
      </li>
       
      <li>
        After we’ve made a decision, you’ll receive an email notification with a link to details about the decision. Your employer will also get a copy of the decision.
      </li>
      <li>
        Once your application is approved, you can expect your first payment to arrive at the beginning of your fourth week of leave, if your leave has already started. If your leave starts in the future, you can expect your first payment 2-4 weeks after your leave starts. After that, you will receive your payments every week.
      </li>
      <li>
        <a
          href="/applications/status?absence_case_id=NTN-111-ABS-01"
        >
          Track the status of your application here
        </a>
        .
      </li>
    </ul>
    <h2
      class="font-heading-md text-bold"
    >
      Learn more about paid leave benefits
    </h2>
    Review 
    <a
      href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefits-guide#benefit-amount-details-"
      rel="noreferrer noopener"
      target="_blank"
    >
      our benefits guide
    </a>
     to find out more about how benefits are determined. For a rough estimate of how much you might receive, 
    <a
      href="https://calculator.digital.mass.gov/pfml/yourbenefits/"
      rel="noreferrer noopener"
      target="_blank"
    >
      use this calculator
    </a>
    . The maximum total amount that a person can receive in PFML benefits is $850 per week, even if you have been approved for leave benefits from multiple employers.
    <div
      class="border-top-2px border-base-lighter margin-top-4 padding-top-4"
    >
      <h2
        class="font-heading-md text-bold"
      >
        Help us improve this site
      </h2>
      <p>
        We’d like to hear more about your experience on this site. Please take a few minutes to share your feedback.
      </p>
      <p>
        <a
          href="https://www.mass.gov/paidleave-claimant-feedback"
          rel="noopener"
          target="_blank"
        >
          Take the survey
        </a>
      </p>
    </div>
    <div
      class="border-top-2px border-base-lighter margin-top-4 padding-top-4"
    >
      <h2
        class="font-heading-md text-bold"
      >
        View status and details for your application
      </h2>
      <a
        class="usa-button margin-top-4"
        href="/applications/status?absence_case_id=NTN-111-ABS-01"
      >
        View your application
      </a>
    </div>
  </div>
</div>
`;

exports[`Success renders content tailored to Medical (Pregnant) 1`] = `
<div>
  <a
    class="usa-button margin-bottom-5 usa-button--unstyled"
    href="/applications"
  >
    <svg
      class="margin-right-05"
      height="12"
      viewBox="0 0 448 512"
      width="12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M257.5 445.1l-22.2 22.2c-9.4 9.4-24.6 9.4-33.9 0L7 273c-9.4-9.4-9.4-24.6 0-33.9L201.4 44.7c9.4-9.4 24.6-9.4 33.9 0l22.2 22.2c9.5 9.5 9.3 25-.4 34.3L136.6 216H424c13.3 0 24 10.7 24 24v32c0 13.3-10.7 24-24 24H136.6l120.5 114.8c9.8 9.3 10 24.8.4 34.3z"
        fill="currentColor"
      />
    </svg>
    Back to your applications
  </a>
  <h1
    class="js-title margin-top-0 margin-bottom-2 font-heading-lg line-height-sans-2"
    tabindex="-1"
  >
    You submitted your application
  </h1>
  <p
    class="margin-bottom-5"
  >
    Your application ID is 
    <strong>
      NTN-111-ABS-01
    </strong>
  </p>
  <div
    class="measure-6"
  >
    <h2
      class="font-heading-md text-bold"
    >
      <svg
        class="margin-right-2 text-secondary text-middle"
        fill="currentColor"
        height="30"
        viewBox="0 0 33 37"
        width="30"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20.841 35.51C9.798 40.57-7.343 7.19 3.451 1.56L6.609 0l5.235 10.23-3.121 1.54c-3.281 1.77 3.553 15.14 6.909 13.51.136-.06 3.083-1.51 3.094-1.52l5.278 10.2c-.012.01-2.982 1.47-3.163 1.55zm.399-29.23a9.49 9.49 0 016.376 11.81l-2.69-.8a6.681 6.681 0 00-.528-5.09 6.65 6.65 0 00-3.962-3.22zM19.838 11a4.542 4.542 0 012.71 2.21c.6 1.11.694 2.35.36 3.48l-4.373-1.31zm2.003-6.74c2.84.85 5.359 2.78 6.881 5.6 1.52 2.82 1.757 5.99.912 8.83l2.758.83a14.45 14.45 0 00-1.141-11.03 14.41 14.41 0 00-8.587-6.99z"
        />
      </svg>
      We may need more information from you
    </h2>
    <p>
      Call the Contact Center at 
      <a
        href="tel:(833) 344-7365"
      >
        (833) 344‑7365
      </a>
       if any of these are true:
    </p>
    <ul
      class="usa-list"
    >
      <li>
        You have already taken leave to care for a family member since July 1, 2021
      </li>
      <li>
        You have already taken leave since January 1, 2021 for 
        <a
          href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-fact-sheet#when-can-i-use-pfml?-"
          rel="noopener noreferrer"
          target="_blank"
        >
          any other reason that qualifies for PFML
        </a>
      </li>
      <li>
        You plan to use any accrued paid leave or any other benefits from your employer during your paid leave from PFML (for example: your employer’s parental leave program or paid sick time)
      </li>
      <li>
        You expect to get income from any other sources during your leave (for example: disability insurance, retirement benefits, or another job)
      </li>
    </ul>
    <h2
      class="font-heading-md text-bold"
    >
      <svg
        aria-hidden="true"
        class="margin-right-2 text-secondary text-middle"
        fill="currentColor"
        height="30"
        viewBox="0 0 20 20"
        width="30"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 1.7V20H0V1.7h2.5v.8c.1.9.9 1.6 1.8 1.5.8 0 1.5-.7 1.5-1.5v-.8h8.3v.8c.1.9.9 1.6 1.9 1.5.8-.1 1.5-.7 1.5-1.5v-.8H20zm-1.7 5H1.7v11.7h16.7V6.7zm-1.6-4.2c0 .5-.4.8-.8.8S15 3 15 2.5V.8c0-.4.4-.8.8-.8s.8.4.8.8v1.7zM5 2.5c0 .5-.4.8-.8.8s-.9-.3-.9-.8V.8c0-.4.4-.8.9-.8s.8.4.8.8v1.7z"
        />
      </svg>
      What happens next
    </h2>
    <ul
      class="usa-list"
    >
       
      <li>
        Your employer has 10 business days to provide feedback on your application.
      </li>
       
      <li>
        We’ll confirm your eligibility and make sure that your documents are valid.
      </li>
       
      <li>
        After we’ve made a decision, you’ll receive an email notification with a link to details about the decision. Your employer will also get a copy of the decision.
      </li>
      <li>
        Once your application is approved, you can expect your first payment to arrive at the beginning of your fourth week of leave, if your leave has already started. If your leave starts in the future, you can expect your first payment 2-4 weeks after your leave starts. After that, you will receive your payments every week.
      </li>
      <li>
        <a
          href="/applications/status?absence_case_id=NTN-111-ABS-01"
        >
          Track the status of your application here
        </a>
        .
      </li>
    </ul>
    <h2
      class="font-heading-md text-bold"
    >
      Learn more about paid leave benefits
    </h2>
    Review 
    <a
      href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefits-guide#benefit-amount-details-"
      rel="noreferrer noopener"
      target="_blank"
    >
      our benefits guide
    </a>
     to find out more about how benefits are determined. For a rough estimate of how much you might receive, 
    <a
      href="https://calculator.digital.mass.gov/pfml/yourbenefits/"
      rel="noreferrer noopener"
      target="_blank"
    >
      use this calculator
    </a>
    . The maximum total amount that a person can receive in PFML benefits is $850 per week, even if you have been approved for leave benefits from multiple employers.
    <div
      class="padding-top-2 margin-top-2"
    >
      <h2
        class="font-heading-md text-bold"
      >
        <svg
          class="margin-right-2 text-secondary text-middle"
          fill="currentColor"
          height="30"
          viewBox="0 0 13 16"
          width="30"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <path
              d="M0 .017h12.938V16H0z"
              id="icon-copy_svg__a"
            />
          </defs>
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <g>
              <mask
                fill="#fff"
                id="icon-copy_svg__b"
              >
                <use
                  xlink:href="#icon-copy_svg__a"
                />
              </mask>
              <path
                d="M11.973 12.387a.163.163 0 01-.161.161h-1.06V3.63c0-.623-.506-1.13-1.127-1.13H3.152V1.147c0-.088.073-.162.16-.162h8.5c.087 0 .16.074.16.162v11.24zM9.786 14.87a.163.163 0 01-.16.161h-8.5a.163.163 0 01-.16-.161V3.63c0-.088.073-.162.16-.162h8.5c.087 0 .16.074.16.162V14.87zM11.812.017h-8.5c-.62 0-1.126.506-1.126 1.129V2.5h-1.06C.506 2.5 0 3.007 0 3.63V14.87C0 15.493.505 16 1.126 16h8.5c.62 0 1.126-.507 1.126-1.129v-1.355h1.06c.62 0 1.126-.507 1.126-1.13V1.147c0-.623-.505-1.13-1.126-1.13z"
                fill="#000002"
                mask="url(#icon-copy_svg__b)"
              />
            </g>
            <path
              d="M8.452 4.8H2.923c-.268 0-.486.179-.486.4 0 .221.218.4.486.4h5.529c.268 0 .486-.179.486-.4 0-.22-.218-.4-.486-.4M8.452 7.2H2.923c-.268 0-.486.179-.486.4 0 .221.218.4.486.4h5.529c.268 0 .486-.179.486-.4 0-.221-.218-.4-.486-.4M8.452 9.6H2.923c-.268 0-.486.179-.486.4 0 .221.218.4.486.4h5.529c.268 0 .486-.179.486-.4 0-.221-.218-.4-.486-.4M8.452 12H2.923c-.268 0-.486.179-.486.4 0 .221.218.4.486.4h5.529c.268 0 .486-.179.486-.4 0-.221-.218-.4-.486-.4"
              fill="#000002"
            />
          </g>
        </svg>
        You may also be eligible for paid family leave
      </h2>
      <p>
        You may be able to take up to 12 weeks of paid family leave to bond with your child after your medical leave ends. 
        <a
          href="https://www.mass.gov/pfml-medical-bonding"
          rel="noopener noreferrer"
          target="_blank"
        >
          Family leave to bond with your child
        </a>
         can be easily added to your application by calling our Contact Center at 
        <a
          href="tel:(833) 344-7365"
        >
          (833) 344‑7365
        </a>
         after your medical leave is approved. You should not submit a second application.
      </p>
    </div>
    <div
      class="border-top-2px border-base-lighter margin-top-4 padding-top-4"
    >
      <h2
        class="font-heading-md text-bold"
      >
        Help us improve this site
      </h2>
      <p>
        We’d like to hear more about your experience on this site. Please take a few minutes to share your feedback.
      </p>
      <p>
        <a
          href="https://www.mass.gov/paidleave-claimant-feedback"
          rel="noopener"
          target="_blank"
        >
          Take the survey
        </a>
      </p>
    </div>
    <div
      class="border-top-2px border-base-lighter margin-top-4 padding-top-4"
    >
      <h2
        class="font-heading-md text-bold"
      >
        View status and details for your application
      </h2>
      <a
        class="usa-button margin-top-4"
        href="/applications/status?absence_case_id=NTN-111-ABS-01"
      >
        View your application
      </a>
    </div>
  </div>
</div>
`;

exports[`Success renders content tailored to Medical (Pregnant, applying in advance) 1`] = `
<div>
  <a
    class="usa-button margin-bottom-5 usa-button--unstyled"
    href="/applications"
  >
    <svg
      class="margin-right-05"
      height="12"
      viewBox="0 0 448 512"
      width="12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M257.5 445.1l-22.2 22.2c-9.4 9.4-24.6 9.4-33.9 0L7 273c-9.4-9.4-9.4-24.6 0-33.9L201.4 44.7c9.4-9.4 24.6-9.4 33.9 0l22.2 22.2c9.5 9.5 9.3 25-.4 34.3L136.6 216H424c13.3 0 24 10.7 24 24v32c0 13.3-10.7 24-24 24H136.6l120.5 114.8c9.8 9.3 10 24.8.4 34.3z"
        fill="currentColor"
      />
    </svg>
    Back to your applications
  </a>
  <h1
    class="js-title margin-top-0 margin-bottom-2 font-heading-lg line-height-sans-2"
    tabindex="-1"
  >
    You submitted your application
  </h1>
  <p
    class="margin-bottom-5"
  >
    Your application ID is 
    <strong>
      NTN-111-ABS-01
    </strong>
  </p>
  <div
    class="measure-6"
  >
    <h2
      class="font-heading-md text-bold"
    >
      <svg
        class="margin-right-2 text-secondary text-middle"
        fill="currentColor"
        height="30"
        viewBox="0 0 33 37"
        width="30"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20.841 35.51C9.798 40.57-7.343 7.19 3.451 1.56L6.609 0l5.235 10.23-3.121 1.54c-3.281 1.77 3.553 15.14 6.909 13.51.136-.06 3.083-1.51 3.094-1.52l5.278 10.2c-.012.01-2.982 1.47-3.163 1.55zm.399-29.23a9.49 9.49 0 016.376 11.81l-2.69-.8a6.681 6.681 0 00-.528-5.09 6.65 6.65 0 00-3.962-3.22zM19.838 11a4.542 4.542 0 012.71 2.21c.6 1.11.694 2.35.36 3.48l-4.373-1.31zm2.003-6.74c2.84.85 5.359 2.78 6.881 5.6 1.52 2.82 1.757 5.99.912 8.83l2.758.83a14.45 14.45 0 00-1.141-11.03 14.41 14.41 0 00-8.587-6.99z"
        />
      </svg>
      We may need more information from you
    </h2>
    <p>
      Call the Contact Center at 
      <a
        href="tel:(833) 344-7365"
      >
        (833) 344‑7365
      </a>
       if any of these are true:
    </p>
    <ul
      class="usa-list"
    >
      <li>
        You have already taken leave to care for a family member since July 1, 2021
      </li>
      <li>
        You have already taken leave since January 1, 2021 for 
        <a
          href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-fact-sheet#when-can-i-use-pfml?-"
          rel="noopener noreferrer"
          target="_blank"
        >
          any other reason that qualifies for PFML
        </a>
      </li>
      <li>
        You plan to use any accrued paid leave or any other benefits from your employer during your paid leave from PFML (for example: your employer’s parental leave program or paid sick time)
      </li>
      <li>
        You expect to get income from any other sources during your leave (for example: disability insurance, retirement benefits, or another job)
      </li>
    </ul>
    <h2
      class="font-heading-md text-bold"
    >
      <svg
        aria-hidden="true"
        class="margin-right-2 text-secondary text-middle"
        fill="currentColor"
        height="30"
        viewBox="0 0 20 20"
        width="30"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 1.7V20H0V1.7h2.5v.8c.1.9.9 1.6 1.8 1.5.8 0 1.5-.7 1.5-1.5v-.8h8.3v.8c.1.9.9 1.6 1.9 1.5.8-.1 1.5-.7 1.5-1.5v-.8H20zm-1.7 5H1.7v11.7h16.7V6.7zm-1.6-4.2c0 .5-.4.8-.8.8S15 3 15 2.5V.8c0-.4.4-.8.8-.8s.8.4.8.8v1.7zM5 2.5c0 .5-.4.8-.8.8s-.9-.3-.9-.8V.8c0-.4.4-.8.9-.8s.8.4.8.8v1.7z"
        />
      </svg>
      What happens next
    </h2>
    <ul
      class="usa-list"
    >
      <li>
        Your employer has 10 days to provide feedback on your application.
      </li>
      <li>
        After we’ve made a decision, you’ll receive an email notification with a link to details about the decision.
      </li>
      <li>
        If your application is approved prior to your leave, you can expect your first payment to arrive about 3 weeks after your leave starts. Otherwise, you can expect your first payment 2-3 weeks after your leave is approved.
      </li>
      <li>
        <a
          href="/applications/status?absence_case_id=NTN-111-ABS-01"
        >
          Track the status of your application here
        </a>
        .
      </li>
    </ul>
    <h2
      class="font-heading-md text-bold"
    >
      Learn more about paid leave benefits
    </h2>
    Review 
    <a
      href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefits-guide#benefit-amount-details-"
      rel="noreferrer noopener"
      target="_blank"
    >
      our benefits guide
    </a>
     to find out more about how benefits are determined. For a rough estimate of how much you might receive, 
    <a
      href="https://calculator.digital.mass.gov/pfml/yourbenefits/"
      rel="noreferrer noopener"
      target="_blank"
    >
      use this calculator
    </a>
    . The maximum total amount that a person can receive in PFML benefits is $850 per week, even if you have been approved for leave benefits from multiple employers.
    <div
      class="padding-top-2 margin-top-2"
    >
      <h2
        class="font-heading-md text-bold"
      >
        <svg
          class="margin-right-2 text-secondary text-middle"
          fill="currentColor"
          height="30"
          viewBox="0 0 13 16"
          width="30"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <path
              d="M0 .017h12.938V16H0z"
              id="icon-copy_svg__a"
            />
          </defs>
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <g>
              <mask
                fill="#fff"
                id="icon-copy_svg__b"
              >
                <use
                  xlink:href="#icon-copy_svg__a"
                />
              </mask>
              <path
                d="M11.973 12.387a.163.163 0 01-.161.161h-1.06V3.63c0-.623-.506-1.13-1.127-1.13H3.152V1.147c0-.088.073-.162.16-.162h8.5c.087 0 .16.074.16.162v11.24zM9.786 14.87a.163.163 0 01-.16.161h-8.5a.163.163 0 01-.16-.161V3.63c0-.088.073-.162.16-.162h8.5c.087 0 .16.074.16.162V14.87zM11.812.017h-8.5c-.62 0-1.126.506-1.126 1.129V2.5h-1.06C.506 2.5 0 3.007 0 3.63V14.87C0 15.493.505 16 1.126 16h8.5c.62 0 1.126-.507 1.126-1.129v-1.355h1.06c.62 0 1.126-.507 1.126-1.13V1.147c0-.623-.505-1.13-1.126-1.13z"
                fill="#000002"
                mask="url(#icon-copy_svg__b)"
              />
            </g>
            <path
              d="M8.452 4.8H2.923c-.268 0-.486.179-.486.4 0 .221.218.4.486.4h5.529c.268 0 .486-.179.486-.4 0-.22-.218-.4-.486-.4M8.452 7.2H2.923c-.268 0-.486.179-.486.4 0 .221.218.4.486.4h5.529c.268 0 .486-.179.486-.4 0-.221-.218-.4-.486-.4M8.452 9.6H2.923c-.268 0-.486.179-.486.4 0 .221.218.4.486.4h5.529c.268 0 .486-.179.486-.4 0-.221-.218-.4-.486-.4M8.452 12H2.923c-.268 0-.486.179-.486.4 0 .221.218.4.486.4h5.529c.268 0 .486-.179.486-.4 0-.221-.218-.4-.486-.4"
              fill="#000002"
            />
          </g>
        </svg>
        You may also be eligible for paid family leave
      </h2>
      <p>
        You may be able to take up to 12 weeks of paid family leave to bond with your child after your medical leave ends. 
        <a
          href="https://www.mass.gov/pfml-medical-bonding"
          rel="noopener noreferrer"
          target="_blank"
        >
          Family leave to bond with your child
        </a>
         can be easily added to your application by calling our Contact Center at 
        <a
          href="tel:(833) 344-7365"
        >
          (833) 344‑7365
        </a>
         after your medical leave is approved. You should not submit a second application.
      </p>
    </div>
    <div
      class="border-top-2px border-base-lighter margin-top-4 padding-top-4"
    >
      <h2
        class="font-heading-md text-bold"
      >
        Help us improve this site
      </h2>
      <p>
        We’d like to hear more about your experience on this site. Please take a few minutes to share your feedback.
      </p>
      <p>
        <a
          href="https://www.mass.gov/paidleave-claimant-feedback"
          rel="noopener"
          target="_blank"
        >
          Take the survey
        </a>
      </p>
    </div>
    <div
      class="border-top-2px border-base-lighter margin-top-4 padding-top-4"
    >
      <h2
        class="font-heading-md text-bold"
      >
        View status and details for your application
      </h2>
      <a
        class="usa-button margin-top-4"
        href="/applications/status?absence_case_id=NTN-111-ABS-01"
      >
        View your application
      </a>
    </div>
  </div>
</div>
`;
